# rust-adv-pop3

./: CLAUDE.md  Cargo.toml  README.md  skills-lock.json
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-verifier.md
.claude/commands/gsd/: debug.md  new-project.md.bak  research-phase.md
.claude/get-shit-done/references/: decimal-phase-calculation.md  git-integration.md  phase-argument-parsing.md  planning-config.md
.claude/get-shit-done/workflows/: add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  check-todos.md  cleanup.md  complete-milestone.md  diagnose-issues.md  discuss-phase.md  execute-phase.md  execute-plan.md  health.md  insert-phase.md  map-codebase.md  new-milestone.md  new-project.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  progress.md  quick.md  remove-phase.md  research-phase.md  resume-project.md  set-profile.md  settings.md  transition.md  update.md  verify-phase.md  verify-work.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md  v2.0-v3.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-async-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-tls-and-publish/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-protocol-extensions/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-pipelining/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-uidl-caching/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-reconnection/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-connection-pooling/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-RESEARCH-concurrency.md  08-RESEARCH.md  08-TESTING.md  08-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: basic.rs  mime.rs  starttls.rs  tls.rs
src/: builder.rs  client.rs  error.rs  lib.rs  pool.rs  reconnect.rs  response.rs  transport.rs  types.rs
tests/: integration.rs  phase2_async_core.rs  phase3_builder.rs  phase4_commands.rs  phase5_pipelining.rs  phase6_uidl_cache.rs  phase7_reconnection.rs
tests/common/: mod.rs
(+12 files in other folders)
