[package]
name = "pop3"
version = "2.0.0"
edition = "2021"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
license = "MIT"
description = "POP3 Client for Rust"
repository = "https://github.com/mattnenterprise/rust-pop3"
keywords = ["pop3", "email", "mail", "client"]
categories = ["email", "network-programming"]

[lib]
name = "pop3"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-native-certs = "0.8"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
