[package]
name = "pop3"
version = "2.0.0"
edition = "2021"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
license = "MIT"
description = "POP3 Client for Rust"
repository = "https://github.com/mattnenterprise/rust-pop3"
keywords = ["pop3", "email", "mail", "client"]
categories = ["email", "network-programming"]

[lib]
name = "pop3"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[features]
default = ["rustls-tls"]
rustls-tls = ["dep:tokio-rustls", "dep:rustls-native-certs"]
openssl-tls = ["dep:tokio-openssl", "dep:openssl"]

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros"] }
thiserror = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
rustls-native-certs = { version = "0.8", optional = true }
tokio-openssl = { version = "0.6", optional = true }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
tokio-test = "0.4"
