[package]
name = "pop3"
version = "2.0.0"
edition = "2021"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
license = "MIT"
description = "Async POP3 client library for Rust with dual TLS backend support"
repository = "https://github.com/TheDarkSkyXD/rust-adv-pop3"
readme = "README.md"
keywords = ["pop3", "email", "mail", "client", "async"]
categories = ["email", "network-programming", "asynchronous"]

[lib]
name = "pop3"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "tls"
path = "examples/tls.rs"
required-features = ["rustls-tls"]

[[example]]
name = "starttls"
path = "examples/starttls.rs"
required-features = ["rustls-tls"]

[features]
default = ["rustls-tls"]
rustls-tls = ["dep:tokio-rustls", "dep:rustls-native-certs"]
openssl-tls = ["dep:tokio-openssl", "dep:openssl"]
pool = ["dep:bb8"]

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros"] }
thiserror = "2"
md5 = "0.7"
backon = "1.6"
bb8 = { version = "0.9", default-features = false, optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
rustls-native-certs = { version = "0.8", optional = true }
tokio-openssl = { version = "0.6", optional = true }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
tokio-test = "0.4"
